# DalianSinopecRobot

./: README.md
CH4_decode/: CMakeLists.txt
CH4_decode/include/: CH4_read.hpp  rs232.h
CH4_decode/src/: an_packet_protocol.c  main.cpp
DOVE_E4/: CMakeLists.txt
DOVE_E4/include/: function_.hpp  nmea_packet_protocol.h
DOVE_E4/nmea/: nmea.c  nmea.h  parser.h  parser_static.c  parser_types.h
DOVE_E4/nmea/parsers/: gpchc.c  gpchc.h  gpfpd.c  gpfpd.h  gpgga.c  gpgga.h  gpgll.c  gpgll.h  gpgsa.c  gpgsa.h  gpgsv.c  gpgsv.h  gprmc.c  gprmc.h  gptxt.c  gptxt.h  gpvtg.c  gpvtg.h  gtimu.c  gtimu.h  parse.c  parse.h
DOVE_E4/src/: dove_E4.cpp  function_.cpp  nmea_packet_protocol.c
H2S_decode/: CMakeLists.txt
H2S_decode/include/: H2S_read.hpp  orientus_data_dump.h
H2S_decode/src/: main.cpp  orientus_packets.c
VOC_decode/: CMakeLists.txt
VOC_decode/include/: VOC_read.hpp  an_packet_protocol.h
VOC_decode/src/: main.cpp  rs232.c
ZSHRobot_ws/: CMakeLists.txt  run_main.sh
ZSHRobot_ws/configfile/: PatrolConfig copy.xml  PatrolConfig.xml
ZSHRobot_ws/include/: AvoidAbstacle.hpp  Coordinate_System.hpp  Driver.hpp  NEWprotocol.h  XMLParser.hpp  an_packet_protocol.h  communication.hpp  control.hpp  controlcan.h  define.h  doveE4.hpp  global.hpp  gpchc.h  gsof_records.h  kCurves.h  nmea_packet_protocol.h  orientus_packets.h  robottrace.hpp
ZSHRobot_ws/src/: Driver.cpp  communication.cpp  control.cpp  coppeliaSimMsg.cpp  doveE4.cpp  main.cpp  robottrace.cpp
